Bug 444800 - Discover crashes with error ASSERT: "m_responsePending != pending"
Summary: Discover crashes with error ASSERT: "m_responsePending != pending"
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: KNewStuff Backend (other bugs)
Version First Reported In: master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
: 445052 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-11-01 23:41 UTC by Ömer Fadıl USTA
Modified: 2022-02-07 00:06 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
coredumpctl debug (9.78 KB, text/plain)
2021-11-01 23:42 UTC, Ömer Fadıl USTA
Details
coredumpctl info (39.86 KB, text/plain)
2021-11-01 23:43 UTC, Ömer Fadıl USTA
Details
debug for newbug (12.57 KB, text/plain)
2021-11-09 22:00 UTC, Ömer Fadıl USTA
Details
New crash information added by DrKonqi (21.17 KB, patch)
2022-02-07 00:06 UTC, Jean-Marc Strauven
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ömer Fadıl USTA 2021-11-01 23:41:49 UTC
Discover compiled with kdesrc-build with these compile flags : 
-DCMAKE_CXX_STANDARD=17 -DCMAKE_BUILD_TYPE=Debug

User config / settings  everything is clean ( completely recreated user just before kdesrc-build )
Whenever I try to launch(run) it crashes 

coredumpctl info  and coredumpctl debug will be attached.

***********
journald log gives this warnings/errors before/after crash : 

systemd[1230]: Started Discover - Software Center.
plasmashell[1319]: file:///home/kde-dev/kde/usr/share/plasma/plasmoids/org.kde.plasma.taskmanager/contents/ui/Task.qml:366: Unable to assign [undefined] to QString
plasma-discover[3486]: qrc:/qml/DiscoverDrawer.qml:70: TypeError: Cannot read property 'objectName' of null
plasma-discover[3486]: kf.newstuff.core: The CustomName property is deprecated and will be removed in KF6
plasma-discover[3486]: kf.newstuff.core: The CustomName property is deprecated and will be removed in KF6
plasma-discover[3486]: kf.newstuff.core: The CustomName property is deprecated and will be removed in KF6
plasma-discover[3486]: kf.newstuff.core: The CustomName property is deprecated and will be removed in KF6
plasma-discover[3486]: kf.newstuff.core: The CustomName property is deprecated and will be removed in KF6
plasma-discover[3486]: kf.newstuff.core: The CustomName property is deprecated and will be removed in KF6
plasma-discover[3486]: kf.newstuff.core: The CustomName property is deprecated and will be removed in KF6
plasma-discover[3486]: kf.newstuff.core: The CustomName property is deprecated and will be removed in KF6
plasma-discover[3486]: kf.newstuff.core: The CustomName property is deprecated and will be removed in KF6
plasma-discover[3486]: adding empty sources model QStandardItemModel(0x55fc214de8a0)
systemd[1]: Starting Snap Daemon...
snapd[3507]: AppArmor status: apparmor is enabled but some kernel features are missing: dbus, network
plasma-discover[3486]: org.kde.plasma.libdiscover: Couldn't find a category for  "fwupd-backend"
snapd[3507]: daemon.go:248: started snapd/2.51.3-2 (series 16; classic; devmode) manjaro/ (amd64) linux/5.14.15-1-MANJARO.
kernel: loop0: detected capacity change from 0 to 8
systemd[1]: tmp-sanity\x2dmountpoint\x2d321404357.mount: Deactivated successfully.
plasma-discover[3486]: file:///home/kde-dev/kde/usr/lib/qml/org/kde/kirigami.2/private/PrivateActionToolButton.qml:74:5: QML Binding: Binding loop detected for property "value"
snapd[3507]: daemon.go:341: adjusting startup timeout by 30s (pessimistic estimate of 30s plus 5s per snap)
systemd[1]: Started Snap Daemon.
audit[1]: SERVICE_START pid=1 uid=0 auid=4294967295 ses=4294967295 subj==unconfined msg='unit=snapd comm="systemd" exe="/usr/lib/systemd/systemd" hostname=? addr=? terminal=? res=success'
kernel: audit: type=1130 audit(1635809226.189:325): pid=1 uid=0 auid=4294967295 ses=4294967295 subj==unconfined msg='unit=snapd comm="systemd" exe="/usr/lib/systemd/systemd" hostname=? addr=? terminal=? res=success'
plasma-discover[3486]: org.kde.plasma.discover: couldn't open file "/home/kde-dev/.cache/discover/featured-5.9.json" "No such file or directory"
PackageKit[1433]: get-updates transaction /15_cbdcaddc from uid 1001 finished with success after 473ms
plasma-discover[3486]: kf.newstuff.core: Could not find category "Cantor (Python 2)"
plasma-discover[3486]: kf.newstuff.core: Could not find category "Cantor (Python 3)"
plasma-discover[3486]: kf.newstuff.core: Could not find category "Cantor (Python 2)"
plasma-discover[3486]: kf.newstuff.core: Could not find category "Cantor (Python 3)"
plasma-discover[3486]: kf.newstuff.core: Could not find category "Cantor (Python 2)"
plasma-discover[3486]: kf.newstuff.core: Could not find category "Cantor (Python 3)"
plasma-discover[3486]: kf.newstuff.core: Could not find category "Cantor (Python 2)"
plasma-discover[3486]: kf.newstuff.core: Could not find category "Cantor (Python 3)"
plasma-discover[3486]: kf.newstuff.core: Could not find category "Cantor (Python 2)"
plasma-discover[3486]: kf.newstuff.core: Could not find category "Cantor (Python 3)"
plasma-discover[3486]: kf.newstuff.core: Could not find category "Cantor (Python 2)"
plasma-discover[3486]: kf.newstuff.core: Could not find category "Cantor (Python 3)"
plasma-discover[3486]: kf.newstuff.core: Could not find category "Cantor (Python 2)"
plasma-discover[3486]: kf.newstuff.core: Could not find category "Cantor (Python 3)"
plasma-discover[3486]: kf.newstuff.core: Could not find category "Cantor (Python 2)"
plasma-discover[3486]: kf.newstuff.core: Could not find category "Cantor (Python 3)"
plasma-discover[3486]: kf.newstuff.core: Could not find category "KsirK Themes"
plasma-discover[3486]: KNS error in "Ksirk" : KNSCore::ConfigFileError "All categories are missing" QVariant(Invalid)
plasma-discover[3486]: invalid kns backend! "/home/kde-dev/kde/usr/share/knsrcfiles/ksirk.knsrc" because: "Invalid Ksirk backend, contact your distributor."
plasma-discover[3486]: org.kde.plasma.libdiscover: Discarding invalid backend "ksirk.knsrc"
plasma-discover[3486]: ASSERT: "m_responsePending != pending" in file /home/kde-dev/kde/src/plasma/discover/libdiscover/backends/KNSBackend/KNSBackend.cpp, line 235
kioslave5[3549]: kf.kio.slaves.file: readData() returned -1
kioslave5[3549]: ASSERT: "d->appConnection.inited()" in file /home/kde-dev/kde/src/frameworks/kio/src/core/slavebase.cpp, line 317
kded5[1307]: Registering ":1.86/StatusNotifierItem" to system tray
kded5[1307]: Registering ":1.87/StatusNotifierItem" to system tray
snapd[3507]: daemon.go:508: gracefully waiting for running hooks
snapd[3507]: daemon.go:510: done waiting for running hooks
************


It also crashes kioslave5 like this : 

**********
Application: kioslave5 (kioslave5), signal: Aborted
Content of s_kcrashErrorMessage: std::unique_ptr<char []> = {get() = {<No data fields>}}
[KCrash Handler]
#5  0x00007fab5e14ed22 in raise () from /usr/lib/libc.so.6
#6  0x00007fab5e138862 in abort () from /usr/lib/libc.so.6
#7  0x00007fab5e6e394e in QMessageLogger::fatal(char const*, ...) const () from /usr/lib/libQt5Core.so.5
#8  0x00007fab5e6e2cd1 in qt_assert(char const*, char const*, int) () from /usr/lib/libQt5Core.so.5
#9  0x00007fab5f14db1a in KIO::SlaveBase::dispatchLoop (this=0x7ffd3fd53bc0) at /home/kde-dev/kde/src/frameworks/kio/src/core/slavebase.cpp:317
#10 0x00007fab5efb0951 in kdemain (argc=4, argv=0x7ffd3fd53cb0) at /home/kde-dev/kde/src/frameworks/kio/src/ioslaves/file/file.cpp:91
#11 0x000055c8cc19f7e2 in main (argc=5, argv=0x7ffd3fd53de8) at /home/kde-dev/kde/src/frameworks/kio/src/kioslave/kioslave.cpp:141
[Inferior 1 (process 1738) detached]
*******

SOFTWARE/OS VERSIONS
Wayland
KDE Plasma Ver  : 5.23.80 ( git master )
KDE FW Ver : 5.88.0 ( git master )
Qt Ver 5.15.2+kde+r254-1 ( from unstable Manjaro repo )
Comment 1 Ömer Fadıl USTA 2021-11-01 23:42:37 UTC
Created attachment 143113 [details]
coredumpctl debug
Comment 2 Ömer Fadıl USTA 2021-11-01 23:43:02 UTC
Created attachment 143114 [details]
coredumpctl info
Comment 3 Bug Janitor Service 2021-11-05 02:01:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/198
Comment 4 Aleix Pol 2021-11-05 14:53:32 UTC
Git commit a42c064cba3e427d599cf5e046881ac4d6802c8d by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 05/11/2021 at 14:53.
Pushed by apol into branch 'master'.

kns: Do not fail wrapping up when there's an error

Ensure we call setResponsePending from the correct state.

M  +3    -1    libdiscover/backends/KNSBackend/KNSBackend.cpp

https://invent.kde.org/plasma/discover/commit/a42c064cba3e427d599cf5e046881ac4d6802c8d
Comment 5 Ömer Fadıl USTA 2021-11-09 21:56:14 UTC
It looks that patch partially fixed the problem , now it is not crashing directly but after completing any updates it crashes with same line : 

Application: Discover (plasma-discover), signal: Aborted
Content of s_kcrashErrorMessage: std::unique_ptr<char []> = {get() = {<No data fields>}}
[KCrash Handler]
#5  0x00007efd82b71d22 in raise () at /usr/lib/libc.so.6
#6  0x00007efd82b5b862 in abort () at /usr/lib/libc.so.6
#7  0x00007efd8310694e in  () at /usr/lib/libQt5Core.so.5
#8  0x00007efd83105cd1 in qt_assert_x(char const*, char const*, char const*, int) () at /usr/lib/libQt5Core.so.5
#9  0x00007efd664c4e94 in KNSBackend::setResponsePending(bool) (this=0x56363cf5bfb0, pending=false) at /home/kde-dev/kde/src/plasma/discover/libdiscover/backends/KNSBackend/KNSBackend.cpp:235
#10 0x00007efd664c2028 in operator()() const (__closure=0x56363cf665e0) at /home/kde-dev/kde/src/plasma/discover/libdiscover/backends/KNSBackend/KNSBackend.cpp:149
#11 0x00007efd664ca36b in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, KNSBackend::KNSBackend(QObject*, const QString&, const QString&)::<lambda()> >::call(struct {...} &, void **) (f=..., arg=0x7fff21e5f390) at /usr/include/qt/QtCore/qobjectdefs_impl.h:146
#12 0x00007efd664c9e9f in QtPrivate::Functor<KNSBackend::KNSBackend(QObject*, const QString&, const QString&)::<lambda()>, 0>::call<QtPrivate::List<>, void>(struct {...} &, void *, void **) (f=..., arg=0x7fff21e5f390) at /usr/include/qt/QtCore/qobjectdefs_impl.h:256
#13 0x00007efd664c9614 in QtPrivate::QFunctorSlotObject<KNSBackend::KNSBackend(QObject*, const QString&, const QString&)::<lambda()>, 0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *) (which=1, this_=0x56363cf665d0, r=0x56363cf5bfb0, a=0x7fff21e5f390, ret=0x0) at /usr/include/qt/QtCore/qobjectdefs_impl.h:443
#14 0x00007efd83370905 in  () at /usr/lib/libQt5Core.so.5
#15 0x00007efd663d51d4 in KNSCore::Engine::signalUpdateableEntriesLoaded(QList<KNSCore::EntryInternal> const&) (this=0x56363cf5d3a0, _t1=...) at /home/kde-dev/kde/build/frameworks/knewstuff/src/core/KF5NewStuffCore_autogen/EWIEGA46WW/moc_engine.cpp:686
#16 0x00007efd663f7dc5 in KNSCore::Engine::slotEntriesLoaded(KNSCore::Provider::SearchRequest const&, QList<KNSCore::EntryInternal>) (this=0x56363cf5d3a0, request=..., entries=...) at /home/kde-dev/kde/src/frameworks/knewstuff/src/core/engine.cpp:519
#17 0x00007efd6640bb79 in QtPrivate::FunctorCall<QtPrivate::IndexesList<0, 1>, QtPrivate::List<KNSCore::Provider::SearchRequest const&, QList<KNSCore::EntryInternal> const&>, void, void (KNSCore::Engine::*)(KNSCore::Provider::SearchRequest const&, QList<KNSCore::EntryInternal>)>::call(void (KNSCore::Engine::*)(KNSCore::Provider::SearchRequest const&, QList<KNSCore::EntryInternal>), KNSCore::Engine*, void**) (f=(void (KNSCore::Engine::*)(KNSCore::Engine * const, const KNSCore::Provider::SearchRequest &, QList<KNSCore::EntryInternal>)) 0x7efd663f7c66 <KNSCore::Engine::slotEntriesLoaded(KNSCore::Provider::SearchRequest const&, QList<KNSCore::EntryInternal>)>, o=0x56363cf5d3a0, arg=0x7fff21e5f610) at /usr/include/qt/QtCore/qobjectdefs_impl.h:152
#18 0x00007efd6640ac4a in QtPrivate::FunctionPointer<void (KNSCore::Engine::*)(KNSCore::Provider::SearchRequest const&, QList<KNSCore::EntryInternal>)>::call<QtPrivate::List<KNSCore::Provider::SearchRequest const&, QList<KNSCore::EntryInternal> const&>, void>(void (KNSCore::Engine::*)(KNSCore::Provider::SearchRequest const&, QList<KNSCore::EntryInternal>), KNSCore::Engine*, void**) (f=(void (KNSCore::Engine::*)(KNSCore::Engine * const, const KNSCore::Provider::SearchRequest &, QList<KNSCore::EntryInternal>)) 0x7efd663f7c66 <KNSCore::Engine::slotEntriesLoaded(KNSCore::Provider::SearchRequest const&, QList<KNSCore::EntryInternal>)>, o=0x56363cf5d3a0, arg=0x7fff21e5f610) at /usr/include/qt/QtCore/qobjectdefs_impl.h:185
#19 0x00007efd664094d1 in QtPrivate::QSlotObject<void (KNSCore::Engine::*)(KNSCore::Provider::SearchRequest const&, QList<KNSCore::EntryInternal>), QtPrivate::List<KNSCore::Provider::SearchRequest const&, QList<KNSCore::EntryInternal> const&>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, this_=0x56363dd68020, r=0x56363cf5d3a0, a=0x7fff21e5f610, ret=0x0) at /usr/include/qt/QtCore/qobjectdefs_impl.h:418
#20 0x00007efd83370905 in  () at /usr/lib/libQt5Core.so.5
#21 0x00007efd663d9336 in KNSCore::Provider::loadingFinished(KNSCore::Provider::SearchRequest const&, QList<KNSCore::EntryInternal> const&) const (this=0x56363d2a8d10, _t1=..., _t2=...) at /home/kde-dev/kde/build/frameworks/knewstuff/src/core/KF5NewStuffCore_autogen/EWIEGA46WW/moc_provider.cpp:472
#22 0x00007efd6644eed4 in KNSCore::StaticXmlProvider::slotFeedFileLoaded(QDomDocument const&) (this=0x56363d2a8d10, doc=...) at /home/kde-dev/kde/src/frameworks/knewstuff/src/staticxml/staticxmlprovider.cpp:287
#23 0x00007efd66450aee in QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<QDomDocument const&>, void, void (KNSCore::StaticXmlProvider::*)(QDomDocument const&)>::call(void (KNSCore::StaticXmlProvider::*)(QDomDocument const&), KNSCore::StaticXmlProvider*, void**) (f=(void (KNSCore::StaticXmlProvider::*)(KNSCore::StaticXmlProvider * const, const QDomDocument &)) 0x7efd6644e3ca <KNSCore::StaticXmlProvider::slotFeedFileLoaded(QDomDocument const&)>, o=0x56363d2a8d10, arg=0x7fff21e5f8e0) at /usr/include/qt/QtCore/qobjectdefs_impl.h:152
#24 0x00007efd6645086a in QtPrivate::FunctionPointer<void (KNSCore::StaticXmlProvider::*)(QDomDocument const&)>::call<QtPrivate::List<QDomDocument const&>, void>(void (KNSCore::StaticXmlProvider::*)(QDomDocument const&), KNSCore::StaticXmlProvider*, void**) (f=(void (KNSCore::StaticXmlProvider::*)(KNSCore::StaticXmlProvider * const, const QDomDocument &)) 0x7efd6644e3ca <KNSCore::StaticXmlProvider::slotFeedFileLoaded(QDomDocument const&)>, o=0x56363d2a8d10, arg=0x7fff21e5f8e0) at /usr/include/qt/QtCore/qobjectdefs_impl.h:185
#25 0x00007efd6645050d in QtPrivate::QSlotObject<void (KNSCore::StaticXmlProvider::*)(QDomDocument const&), QtPrivate::List<QDomDocument const&>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, this_=0x56363e66d760, r=0x56363d2a8d10, a=0x7fff21e5f8e0, ret=0x0) at /usr/include/qt/QtCore/qobjectdefs_impl.h:418
#26 0x00007efd83370905 in  () at /usr/lib/libQt5Core.so.5
#27 0x00007efd663daaf0 in KNSCore::XmlLoader::signalLoaded(QDomDocument const&) (this=0x56363e37ea60, _t1=...) at /home/kde-dev/kde/build/frameworks/knewstuff/src/core/KF5NewStuffCore_autogen/EWIEGA46WW/moc_xmlloader.cpp:186
#28 0x00007efd66430dac in KNSCore::handleData(KNSCore::XmlLoader*, QByteArray const&) (q=0x56363e37ea60, data=...) at /home/kde-dev/kde/src/frameworks/knewstuff/src/core/xmlloader.cpp:31
#29 0x00007efd6643183e in KNSCore::XmlLoader::slotJobResult(KJob*) (this=0x56363e37ea60, job=0x56363e691db0) at /home/kde-dev/kde/src/frameworks/knewstuff/src/core/xmlloader.cpp:86
#30 0x00007efd66432534 in QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<KJob*>, void, void (KNSCore::XmlLoader::*)(KJob*)>::call(void (KNSCore::XmlLoader::*)(KJob*), KNSCore::XmlLoader*, void**) (f=(void (KNSCore::XmlLoader::*)(KNSCore::XmlLoader * const, KJob *)) 0x7efd664317e8 <KNSCore::XmlLoader::slotJobResult(KJob*)>, o=0x56363e37ea60, arg=0x7fff21e5fb60) at /usr/include/qt/QtCore/qobjectdefs_impl.h:152
#31 0x00007efd6643241c in QtPrivate::FunctionPointer<void (KNSCore::XmlLoader::*)(KJob*)>::call<QtPrivate::List<KJob*>, void>(void (KNSCore::XmlLoader::*)(KJob*), KNSCore::XmlLoader*, void**) (f=(void (KNSCore::XmlLoader::*)(KNSCore::XmlLoader * const, KJob *)) 0x7efd664317e8 <KNSCore::XmlLoader::slotJobResult(KJob*)>, o=0x56363e37ea60, arg=0x7fff21e5fb60) at /usr/include/qt/QtCore/qobjectdefs_impl.h:185
#32 0x00007efd664321ab in QtPrivate::QSlotObject<void (KNSCore::XmlLoader::*)(KJob*), QtPrivate::List<KJob*>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, this_=0x56363d98fb20, r=0x56363e37ea60, a=0x7fff21e5fb60, ret=0x0) at /usr/include/qt/QtCore/qobjectdefs_impl.h:418
#33 0x00007efd83370905 in  () at /usr/lib/libQt5Core.so.5
#34 0x00007efd84363c9e in KJob::result(KJob*, KJob::QPrivateSignal) (this=0x56363e691db0, _t1=0x56363e691db0, _t2=...) at /home/kde-dev/kde/build/frameworks/kcoreaddons/src/lib/KF5CoreAddons_autogen/include/moc_kjob.cpp:633
#35 0x00007efd84361343 in KJob::finishJob(bool) (this=0x56363e691db0, emitResult=true) at /home/kde-dev/kde/src/frameworks/kcoreaddons/src/lib/jobs/kjob.cpp:98
#36 0x00007efd84361fa1 in KJob::emitResult() (this=0x56363e691db0) at /home/kde-dev/kde/src/frameworks/kcoreaddons/src/lib/jobs/kjob.cpp:337
#37 0x00007efd664359b4 in KNSCore::HTTPJob::handleWorkerCompleted() (this=0x56363e691db0) at /home/kde-dev/kde/src/frameworks/knewstuff/src/core/jobs/httpjob.cpp:61
#38 0x00007efd664365f9 in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (KNSCore::HTTPJob::*)()>::call(void (KNSCore::HTTPJob::*)(), KNSCore::HTTPJob*, void**) (f=(void (KNSCore::HTTPJob::*)(KNSCore::HTTPJob * const)) 0x7efd6643599c <KNSCore::HTTPJob::handleWorkerCompleted()>, o=0x56363e691db0, arg=0x7fff21e5fd40) at /usr/include/qt/QtCore/qobjectdefs_impl.h:152
#39 0x00007efd6643643d in QtPrivate::FunctionPointer<void (KNSCore::HTTPJob::*)()>::call<QtPrivate::List<>, void>(void (KNSCore::HTTPJob::*)(), KNSCore::HTTPJob*, void**) (f=(void (KNSCore::HTTPJob::*)(KNSCore::HTTPJob * const)) 0x7efd6643599c <KNSCore::HTTPJob::handleWorkerCompleted()>, o=0x56363e691db0, arg=0x7fff21e5fd40) at /usr/include/qt/QtCore/qobjectdefs_impl.h:185
#40 0x00007efd66436187 in QtPrivate::QSlotObject<void (KNSCore::HTTPJob::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, this_=0x56363e74c7a0, r=0x56363e691db0, a=0x7fff21e5fd40, ret=0x0) at /usr/include/qt/QtCore/qobjectdefs_impl.h:418
#41 0x00007efd83370905 in  () at /usr/lib/libQt5Core.so.5
#42 0x00007efd663d7f3b in KNSCore::HTTPWorker::completed() (this=0x56363d1028a0) at /home/kde-dev/kde/build/frameworks/knewstuff/src/core/KF5NewStuffCore_autogen/AJN4HOEG3V/moc_httpworker.cpp:214
#43 0x00007efd66437f59 in KNSCore::HTTPWorker::handleFinished() (this=0x56363d1028a0) at /home/kde-dev/kde/src/frameworks/knewstuff/src/core/jobs/httpworker.cpp:176
#44 0x00007efd664395a6 in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (KNSCore::HTTPWorker::*)()>::call(void (KNSCore::HTTPWorker::*)(), KNSCore::HTTPWorker*, void**) (f=(void (KNSCore::HTTPWorker::*)(KNSCore::HTTPWorker * const)) 0x7efd6643747c <KNSCore::HTTPWorker::handleFinished()>, o=0x56363d1028a0, arg=0x7fff21e5ffe0) at /usr/include/qt/QtCore/qobjectdefs_impl.h:152
#45 0x00007efd664394e4 in QtPrivate::FunctionPointer<void (KNSCore::HTTPWorker::*)()>::call<QtPrivate::List<>, void>(void (KNSCore::HTTPWorker::*)(), KNSCore::HTTPWorker*, void**) (f=(void (KNSCore::HTTPWorker::*)(KNSCore::HTTPWorker * const)) 0x7efd6643747c <KNSCore::HTTPWorker::handleFinished()>, o=0x56363d1028a0, arg=0x7fff21e5ffe0) at /usr/include/qt/QtCore/qobjectdefs_impl.h:185
#46 0x00007efd66439361 in QtPrivate::QSlotObject<void (KNSCore::HTTPWorker::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, this_=0x56363e691e80, r=0x56363d1028a0, a=0x7fff21e5ffe0, ret=0x0) at /usr/include/qt/QtCore/qobjectdefs_impl.h:418
#47 0x00007efd83370905 in  () at /usr/lib/libQt5Core.so.5
#48 0x00007efd83695785 in  () at /usr/lib/libQt5Network.so.5
#49 0x00007efd83367097 in QObject::event(QEvent*) () at /usr/lib/libQt5Core.so.5
#50 0x00007efd8485aff6 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#51 0x00007efd833391fa in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /usr/lib/libQt5Core.so.5
#52 0x00007efd8333c3a9 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /usr/lib/libQt5Core.so.5
#53 0x00007efd83393508 in  () at /usr/lib/libQt5Core.so.5
#54 0x00007efd81b364dc in g_main_context_dispatch () at /usr/lib/libglib-2.0.so.0
#55 0x00007efd81b8a799 in  () at /usr/lib/libglib-2.0.so.0
#56 0x00007efd81b33bc1 in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#57 0x00007efd83392b1a in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#58 0x00007efd83337aab in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#59 0x00007efd83340298 in QCoreApplication::exec() () at /usr/lib/libQt5Core.so.5
#60 0x000056363b68dcc7 in main(int, char**) (argc=3, argv=0x7fff21e60708) at /home/kde-dev/kde/src/plasma/discover/discover/main.cpp:213
[Inferior 1 (process 2020) detached]
Comment 6 Ömer Fadıl USTA 2021-11-09 22:00:52 UTC
Created attachment 143383 [details]
debug for newbug
Comment 7 Aleix Pol 2021-11-10 01:24:25 UTC
*** Bug 445052 has been marked as a duplicate of this bug. ***
Comment 8 Aleix Pol 2021-11-10 02:34:28 UTC
Git commit f676c7f3a3ab0d8b8cbd24af10c3029a1b620e01 by Aleix Pol.
Committed on 10/11/2021 at 02:33.
Pushed by apol into branch 'master'.

kns: Prevent calling setResponsePending(false) when we didn't issue

M  +3    -1    libdiscover/backends/KNSBackend/KNSBackend.cpp

https://invent.kde.org/plasma/discover/commit/f676c7f3a3ab0d8b8cbd24af10c3029a1b620e01
Comment 9 Jean-Marc Strauven 2022-02-07 00:06:56 UTC
Created attachment 146366 [details]
New crash information added by DrKonqi

plasma-discover (5.18.5) using Qt 5.12.8

- What I was doing when the application crashed:
I have just made a update via discover and now, I can't restart Discover and close my computer

-- Backtrace (Reduced):
#6  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
#7  0x00007ff174f9c859 in __GI_abort () at abort.c:79
#8  0x00007ff1753d2aad in QMessageLogger::fatal(char const*, ...) const () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#9  0x00007ff17707b065 in QSGRenderLoop::handleContextCreationFailure(QQuickWindow*, bool) () from /lib/x86_64-linux-gnu/libQt5Quick.so.5
[...]
#12 0x00007ff175f539ad in QWindow::event(QEvent*) () from /lib/x86_64-linux-gnu/libQt5Gui.so.5