kns: Do not fail wrapping up when there's an error

Ensure we call setResponsePending from the correct state.

BUG: 444800